--- a/src/project_state.json
+++ b/src/project_state.json
@@ -1,16 +1,24 @@
 {
   "schemaVersion": "1.0.0",
   "projectStateVersion": 3,
-  "summary": "Build a market ticker that shows share prices sourced from the NSE India website.",
+  "summary": "Add a Feedback section under Contact that embeds a provided Google Form in a card-style layout.",
   "architectural_notes": [
-    "Data source for share prices: NSE India website (https://www.nseindia.com/)."
+    "Feedback will be shown under the existing Contact section and will embed an external Google Form (card-style embed)."
   ],
   "known_issues": [],
   "isFixRequest": false,
   "existing_features": [
     {
-      "id": "feature-ensure-the-frontend-market-ticker-uses-backend-provided-nse-sourced-stock-data-and-has-appropriate-loading-empty-and-error-states-in-the-ticker-ui",
-      "title": "Ensure the frontend market ticker uses backend-provided NSE-sourced stock data and has appropriate loading, empty, and error states in the ticker UI.",
+      "id": "feature-update-the-contact-page-so-that-the-existing-feedback-card-embeds-the-provided-google-form-directly-inside-the-card-iframe-embed-instead-of-only-offering-a-button-link-to-open-it-in-a-new-tab",
+      "title": "Update the Contact page so that the existing \"Feedback\" card embeds the provided Google Form directly inside the card (iframe embed), instead of only offering a button/link to open it in a new tab.",
+      "reqIds": [
+        "REQ-1"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-centralize-the-embedded-form-url-derivation-in-the-existing-feedback-form-utility-so-the-contact-page-embed-stays-consistent-with-the-already-shared-google-form-constant",
+      "title": "Centralize the embedded-form URL derivation in the existing feedback form utility so the Contact page embed stays consistent with the already-shared Google Form constant.",
       "reqIds": [
         "REQ-2"
       ],
@@ -20,20 +28,12 @@
   "new_feature_requests": [
     {
       "id": "AR-1",
-      "summary": "Add market ticker to display share prices fetched from NSE India website (https://www.nseindia.com/)",
+      "summary": "Embed the provided Google Form as a card-style Feedback section under the Contact area (not a separate page, not a button).",
       "reqIds": [],
-      "status": "pending"
-    },
-    {
-      "id": "AR-2",
-      "summary": "Implement backend support to fetch share prices from the NSE India website (https://www.nseindia.com/) using HTTP outcalls, and expose a query method that returns the latest available stock price data (at minimum: symbol, companyName, ltp, dayClose) for the frontend market ticker.",
-      "reqIds": [
-        "REQ-1"
-      ],
       "status": "pending"
     }
   ],
-  "projectName": "Fetch and display live share prices from NSE India in the Market Ticker",
+  "projectName": "Embed Google Form inside Contact > Feedback card",
   "clarification_mode": "instant",
   "clarification_rounds": 0
 }
