--- a/src/project_state.json
+++ b/src/project_state.json
@@ -1,26 +1,50 @@
 {
   "schemaVersion": "1.0.0",
   "projectStateVersion": 3,
-  "summary": "Add a Feedback section under Contact that embeds a provided Google Form in a card-style layout.",
-  "architectural_notes": [
-    "Feedback will be shown under the existing Contact section and will embed an external Google Form (card-style embed)."
+  "summary": "New project",
+  "architectural_notes": [],
+  "known_issues": [
+    "Draft and Live pages are taking too much time to load (performance issue reported)."
   ],
-  "known_issues": [],
-  "isFixRequest": false,
+  "isFixRequest": true,
   "existing_features": [
     {
-      "id": "feature-update-the-contact-page-so-that-the-existing-feedback-card-embeds-the-provided-google-form-directly-inside-the-card-iframe-embed-instead-of-only-offering-a-button-link-to-open-it-in-a-new-tab",
-      "title": "Update the Contact page so that the existing \"Feedback\" card embeds the provided Google Form directly inside the card (iframe embed), instead of only offering a button/link to open it in a new tab.",
+      "id": "feature-reduce-initial-javascript-bundle-size-by-code-splitting-route-components-so-that-non-home-pages-learning-glossary-articles-research-blogs-calculators-admin-etc-are-loaded-lazily-only-when-the-user-navigates-to-them",
+      "title": "Reduce initial JavaScript bundle size by code-splitting route components so that non-home pages (learning, glossary, articles, research, blogs, calculators, admin, etc.) are loaded lazily only when the user navigates to them.",
       "reqIds": [
         "REQ-1"
       ],
       "version": 1
     },
     {
-      "id": "feature-centralize-the-embedded-form-url-derivation-in-the-existing-feedback-form-utility-so-the-contact-page-embed-stays-consistent-with-the-already-shared-google-form-constant",
-      "title": "Centralize the embedded-form URL derivation in the existing feedback form utility so the Contact page embed stays consistent with the already-shared Google Form constant.",
+      "id": "feature-add-a-consistent-route-level-loading-ui-e-g-a-minimal-skeleton-spinner-for-lazy-loaded-routes-so-the-app-provides-immediate-feedback-during-chunk-download-and-canister-query-latency",
+      "title": "Add a consistent route-level loading UI (e.g., a minimal skeleton/spinner) for lazy-loaded routes so the app provides immediate feedback during chunk download and canister query latency.",
       "reqIds": [
         "REQ-2"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-defer-non-critical-ui-and-network-work-on-first-paint-by-loading-the-chatassistantwidget-asynchronously-do-not-block-initial-render-on-its-code-or-initialization",
+      "title": "Defer non-critical UI and network work on first paint by loading the ChatAssistantWidget asynchronously (do not block initial render on its code or initialization).",
+      "reqIds": [
+        "REQ-3"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-optimize-above-the-fold-image-loading-on-the-home-page-by-ensuring-the-hero-image-does-not-block-first-render-and-minimizes-layout-shift-use-explicit-dimensions-and-appropriate-loading-behavior",
+      "title": "Optimize above-the-fold image loading on the home page by ensuring the hero image does not block first render and minimizes layout shift (use explicit dimensions and appropriate loading behavior).",
+      "reqIds": [
+        "REQ-4"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-reduce-redundant-backend-queries-during-app-startup-by-tuning-react-query-settings-for-global-initial-checks-and-always-on-components-e-g-maintenance-admin-checks-and-footer-market-ticker-to-avoid-aggressive-refetching-and-to-cache-results-appropriately",
+      "title": "Reduce redundant backend queries during app startup by tuning React Query settings for global/initial checks and always-on components (e.g., maintenance/admin checks and footer market ticker) to avoid aggressive refetching and to cache results appropriately.",
+      "reqIds": [
+        "REQ-5"
       ],
       "version": 1
     }
@@ -28,12 +52,12 @@
   "new_feature_requests": [
     {
       "id": "AR-1",
-      "summary": "Embed the provided Google Form as a card-style Feedback section under the Contact area (not a separate page, not a button).",
+      "summary": "Optimize Draft and Live page load time/performance (e.g., images, code splitting, loading tweaks)",
       "reqIds": [],
       "status": "pending"
     }
   ],
-  "projectName": "Embed Google Form inside Contact > Feedback card",
+  "projectName": "Optimize Draft and Live page load performance (code splitting, deferred widgets, query caching)",
   "clarification_mode": "instant",
   "clarification_rounds": 0
 }
