Initial app build and generated code; preview ready
# Motivation
Started and completed the automated build: source code was written, the application spec was composed, and the generated code is ready for a live preview. This commit captures the output of that generation so the user can verify the live ticker and request refinements if needed.

# Changes
No changes planned to spec.md. The commit captures the generated application source and scaffold produced by the build process; the specification itself remains unchanged.

Co-authored-by: Caffeine <forge@caffeine.ai>

--- a/src/project_state.json
+++ b/src/project_state.json
@@ -1,50 +1,24 @@
 {
   "schemaVersion": "1.0.0",
   "projectStateVersion": 3,
-  "summary": "New project",
+  "summary": "Website/app to display a live market ticker for NIFTY Top 100 stocks using data sourced from NSE India (nseindia.com).",
   "architectural_notes": [],
-  "known_issues": [
-    "Draft and Live pages are taking too much time to load (performance issue reported)."
-  ],
-  "isFixRequest": true,
+  "known_issues": [],
+  "isFixRequest": false,
   "existing_features": [
     {
-      "id": "feature-reduce-initial-javascript-bundle-size-by-code-splitting-route-components-so-that-non-home-pages-learning-glossary-articles-research-blogs-calculators-admin-etc-are-loaded-lazily-only-when-the-user-navigates-to-them",
-      "title": "Reduce initial JavaScript bundle size by code-splitting route components so that non-home pages (learning, glossary, articles, research, blogs, calculators, admin, etc.) are loaded lazily only when the user navigates to them.",
-      "reqIds": [
-        "REQ-1"
-      ],
-      "version": 1
-    },
-    {
-      "id": "feature-add-a-consistent-route-level-loading-ui-e-g-a-minimal-skeleton-spinner-for-lazy-loaded-routes-so-the-app-provides-immediate-feedback-during-chunk-download-and-canister-query-latency",
-      "title": "Add a consistent route-level loading UI (e.g., a minimal skeleton/spinner) for lazy-loaded routes so the app provides immediate feedback during chunk download and canister query latency.",
+      "id": "feature-expose-a-new-react-query-hook-to-retrieve-nifty-top-100-stock-data-from-the-backend-and-refetch-it-periodically-to-provide-live-prices",
+      "title": "Expose a new React Query hook to retrieve NIFTY Top 100 stock data from the backend and refetch it periodically to provide live prices.",
       "reqIds": [
         "REQ-2"
       ],
       "version": 1
     },
     {
-      "id": "feature-defer-non-critical-ui-and-network-work-on-first-paint-by-loading-the-chatassistantwidget-asynchronously-do-not-block-initial-render-on-its-code-or-initialization",
-      "title": "Defer non-critical UI and network work on first paint by loading the ChatAssistantWidget asynchronously (do not block initial render on its code or initialization).",
+      "id": "feature-update-the-website-market-ticker-ui-to-display-nifty-top-100-live-prices-instead-of-nifty-50-including-appropriate-label-text-for-live-vs-closed-market-state",
+      "title": "Update the website market ticker UI to display NIFTY Top 100 live prices (instead of NIFTY 50), including appropriate label text for live vs closed market state.",
       "reqIds": [
         "REQ-3"
-      ],
-      "version": 1
-    },
-    {
-      "id": "feature-optimize-above-the-fold-image-loading-on-the-home-page-by-ensuring-the-hero-image-does-not-block-first-render-and-minimizes-layout-shift-use-explicit-dimensions-and-appropriate-loading-behavior",
-      "title": "Optimize above-the-fold image loading on the home page by ensuring the hero image does not block first render and minimizes layout shift (use explicit dimensions and appropriate loading behavior).",
-      "reqIds": [
-        "REQ-4"
-      ],
-      "version": 1
-    },
-    {
-      "id": "feature-reduce-redundant-backend-queries-during-app-startup-by-tuning-react-query-settings-for-global-initial-checks-and-always-on-components-e-g-maintenance-admin-checks-and-footer-market-ticker-to-avoid-aggressive-refetching-and-to-cache-results-appropriately",
-      "title": "Reduce redundant backend queries during app startup by tuning React Query settings for global/initial checks and always-on components (e.g., maintenance/admin checks and footer market ticker) to avoid aggressive refetching and to cache results appropriately.",
-      "reqIds": [
-        "REQ-5"
       ],
       "version": 1
     }
@@ -52,12 +26,21 @@
   "new_feature_requests": [
     {
       "id": "AR-1",
-      "summary": "Optimize Draft and Live page load time/performance (e.g., images, code splitting, loading tweaks)",
+      "summary": "Add a market ticker for NIFTY Top 100 stocks sourced from https://www.nseindia.com/ and display live prices on the website",
       "reqIds": [],
+      "status": "pending"
+    },
+    {
+      "id": "AR-2",
+      "summary": "Add backend support to fetch and serve NIFTY Top 100 (NIFTY 100) stock prices sourced from https://www.nseindia.com/ via canister HTTP outcalls, returning an array of Stock items (symbol, companyName, ltp, dayClose).",
+      "reqIds": [
+        "REQ-1"
+      ],
       "status": "pending"
     }
   ],
-  "projectName": "Optimize Draft and Live page load performance (code splitting, deferred widgets, query caching)",
+  "gameProjectType": "none",
+  "projectName": "Add NIFTY Top 100 live market ticker sourced from NSE India",
   "clarification_mode": "instant",
   "clarification_rounds": 0
 }
